<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salida_titulo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/edtEquipoIdSalida"
            android:hint="@string/salida_hint_equipo_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtCantidadSalida"
            android:hint="@string/salida_hint_cantidad"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spnMotivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edtResponsableSalida"
            android:hint="@string/salida_hint_responsable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnRegistrarSalida"
            android:text="@string/salida_btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
